this is my second upload
numero dos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
 
     <body>
+        <p>Today is the first day of class for Fundamentals of Website Design</p>
         <P>This is my first paragraph.</P>
         <p>This is my second paragraph.</p>
         <h1>Heading One</h1>
