--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>My first page yeah!</title>
+<title>My first page <b>yeah!</b></title>
     </head>
 
     <body>
@@ -22,6 +22,7 @@
         <hr><!-- hr is for horizontal rule-->
 <!--this is a comment for myself. ul id got unordered list-->
         <ul>
+        <p>I like fruits, so I will make a list of the fruits I like... :)</p>
             <li>Apples</li>
             <li>Bananas</li>
             <li>Oranges</li>
