--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="images/red.3.jpg" height="300px" alt="person with red hood and mask">
 
 
-        <P>I <em>getting</em>ready<i>to</i>eat some<u></u><b>pancakes</b></u> html <strong>page.</strong></P>
+        <P>I <em>getting</em>ready<i>to</i>eat some<u></u><b>pancakes</b></u></P>
 
         <h3>I love and hate <a href="http://google.com">Google</a>.</h3>
         <h4>you can <a href="mailto:crivera75@fordham.edu">email me here</a> anytime.</h4>
